--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -1,9 +1,14 @@
 <section class="section">
   <div class="container">
-    <div class="column">
-      <%= render 'trends' %>
-      <%= render 'feed' %>
-      <%= render 'who-to-follow' %>
+    <div class="columns">
+    	<% if user_signed_in? %>
+    		<%= render 'profile' %>
+    	<% else %>
+       <%= render 'trends' %>
+      <% end %>
+
+       <%= render 'feed' %>
+       <%= render 'who-to-follow' %>
     </div>
   </div>
 </section>
